--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Nền Toàn Màn Hình</title>
+  <link rel="icon" href="logo.png" type="image/x-icon">
+  <title>Bình Phước Fantastic Tour</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Ga+Maamli&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
