--- a/diadanh.html
+++ b/diadanh.html
@@ -489,7 +489,7 @@
         </div>
     </section>
     <h1 style="margin-top: 10px;">Di tích lịch sử</h1>
-  <main>
+    <main>
         <div class="grid-container">
             <div class="grid-item" onclick="showinfoBox('Điểm cuối đường ống đẫn xăng dầu VK96', 'Di tích Điểm cuối đường ống dẫn xăng dầu VK96 tại xã Bù Gia Mập, huyện Bù Gia Mập, tỉnh Bình Phước nằm trong hệ thống di tích Đường Trường Sơn – Đường Hồ Chí Minh được Thủ tướng Chính phủ quyết định xếp hạng di tích quốc gia đặc biệt ngày 09/12/2013. Đường Hồ Chí Minh là cầu nối hậu phương lớn miền Bắc với tiền tuyến lớn miền Nam trong kháng chiến chống Mỹ. Nguồn:https://baotangbinhphuoc.org.vn/di-tich-quoc-gia-dac-biet-diem-cuoi-duong-ong-dan-xang-dau-vk96/. Video: QPVN', 'https://www.youtube.com/embed/3wsn4bjjSBE?si=tfIJlK2BywdtIbfx', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249634.13129565117!2d106.98999075625049!3d12.144051646076308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31730f66033c77db%3A0x6645fe281ac0fc67!2zQsO5IEdpYSBN4bqtcCwgQsOsbmggUGjGsOG7m2MsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1733547795416!5m2!1svi!2s')">
                 <img src="https://imgur.com/xDj7yOo.png" alt="Uploaded Image">
@@ -666,31 +666,48 @@
                 <h3>Nghề dệt thổ cẩm dân tộc S’tiêng</h3>
             </div>
 
-            <div class="grid-container">
-                <div class="grid-item" onclick="showinfoBox('Nghề đan gùi của người S’tiêng', 'Nghề đan gùi của người S’tiêng là nghề thủ công truyền thống được tích lũy, phát triển qua nhiều thế hệ, thể hiện kỹ thuật qua bàn tay khéo léo và sáng tạo của người nghệ nhân S’tiêng. ', 'https://www.youtube.com/embed/rY901jqlzp4?si=lMA0l_zaZYetczhq', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499957.76780139795!2d106.64745262918778!3d11.77067933505554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3173772c54246c2f%3A0x36b50743b758dd81!2zQsO5IMSQxINuZywgQsOsbmggUGjGsOG7m2MsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1734681568757!5m2!1svi!2s')">
+            <div class="grid-item" onclick="showinfoBox('Nghề đan gùi của người S’tiêng', 'Nghề đan gùi của người S’tiêng là nghề thủ công truyền thống được tích lũy, phát triển qua nhiều thế hệ, thể hiện kỹ thuật qua bàn tay khéo léo và sáng tạo của người nghệ nhân S’tiêng. ', 'https://www.youtube.com/embed/rY901jqlzp4?si=lMA0l_zaZYetczhq', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499957.76780139795!2d106.64745262918778!3d11.77067933505554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3173772c54246c2f%3A0x36b50743b758dd81!2zQsO5IMSQxINuZywgQsOsbmggUGjGsOG7m2MsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1734681568757!5m2!1svi!2s')">
                     <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
                     <h3>Nghề đan gùi của người S’tiêng</h3>
             </div>
-        </div>
     </main>
 
     <h1 style="margin-top: 10px;">Vui chơi giải trí</h1>
     <main>
         <div class="grid-container">
-            <div class="grid-item" onclick="showinfoBox('Bình Long Phố', 'Tuy chỉ mới đi vào hoạt động gần đây nhưng không gian vui chơi giải trí có hồ bơi lớn tích hợp quán cà phê, phim trường cũng như trung tâm tổ chức sự kiện và tiệc cưới của Bình Long Phố đã nhanh chóng thu hút đông đảo các bạn gần xa. Nơi đây hiện đang là địa điểm -làm mưa làm gió- tại khu vực Bình Long, nhất là trong những ngày hè oi bức.', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
+            <div class="grid-item" onclick="showinfoBox('Bình Long Phố', 'Tuy chỉ mới đi vào hoạt động gần đây nhưng không gian vui chơi giải trí có hồ bơi lớn tích hợp quán cà phê, phim trường cũng như trung tâm tổ chức sự kiện và tiệc cưới của Bình Long Phố đã nhanh chóng thu hút đông đảo các bạn gần xa. Nơi đây hiện đang là địa điểm -làm mưa làm gió- tại khu vực Bình Long, nhất là trong những ngày hè oi bức.', 'https://www.youtube.com/embed/IGxhpq_bpQg?si=FB9cxx7IUhMcKl85', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3907.412098449949!2d106.60302907360773!3d11.665179242175208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31735528e87e13f3%3A0xe407f2b4f692c698!2zQsOsbmggTG9uZyBQaOG7kSBQYXJr!5e0!3m2!1svi!2s!4v1735025832334!5m2!1svi!2s')">
                 <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
-                <h3>Thác Đứng</h3>
+                <h3>Bình Long Phố</h3>
             </div>
-        </div>
+
+            <div class="grid-item" onclick="showinfoBox('Chơn Thành cinema', 'Tuy chỉ mới đi vào hoạt động gần đây nhưng không gian vui chơi giải trí có hồ bơi lớn tích hợp quán cà phê, phim trường cũng như trung tâm tổ chức sự kiện và tiệc cưới của Bình Long Phố đã nhanh chóng thu hút đông đảo các bạn gần xa. Nơi đây hiện đang là địa điểm -làm mưa làm gió- tại khu vực Bình Long, nhất là trong những ngày hè oi bức.','https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.884578935037!2d106.61475707360361!3d11.415922847075635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174ad0004eaa6eb%3A0x53b5bfea35adb360!2zQ2jGoW4gVGjDoG5oIENpbmVtYQ!5e0!3m2!1svi!2s!4v1735025879492!5m2!1svi!2s')">
+                <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
+                <h3>Bình Long Phố</h3>
+        </div> 
     </main>
 
     <h1 style="margin-top: 10px;">Du lịch tôn giáo</h1>
     <main>
         <div class="grid-container">
-            <div class="grid-item" onclick="showinfoBox('Thác Đứng', 'ABC', 'https://www.youtube.com/embed/Y4D7Y2QqGB4?si=VmSj63AjlWTlZrjR', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387144.00758357634!2d-74.25819568818383!3d40.705831640317286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22baca73b8020b8c!2sTimes%20Square!5e0!3m2!1sen!2sus!4v1616347842348!5m2!1sen!2sus')">
+            <div class="grid-item" onclick="showinfoBox('Sóc Bom Bo', 'Sóc Bom Bo là điểm tham quan thuộc xã Bình Minh, huyện Bù Đăng, tỉnh Bình Phước. Địa điểm thuộc top điểm đến ở Bình Phước này nằm cách trung tâm thành phố Đồng Xoài khoảng 50km và là địa điểm gắn liền với nhân dân ta trong công cuộc kháng chiến chống Mĩ hào hùng', 'https : //www.youtube.com/embed/SJ7co2HO3DM?si=hwdYIH1-HjzCW83C', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.969722792727!2d107.18740307410239!3d11.837393238730856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174a024b835d737%3A0x7e7f33ca52d795f5!2sS%C3%B3c%20Bom%20Bo!5e0!3m2!1svi!2s!4v1735027712034!5m2!1svi!2s')">
                 <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
-                <h3>Thác Đứng</h3>
+                <h3>Sóc Bom Bo</h3>
             </div>
+        <div class="grid-container">
+            <div class="grid-item" onclick="showinfoBox('Đình Thần Hưng Long', 'Di tích Đình thần Hưng Long ở phường Hưng Long, thị xã Chơn Thành, tỉnh Bình Phước. Hàng năm, tại Đình diễn ra 4 lễ chính: Lễ Khai Sơn (07/01 âm lịch), lễ Kỳ Yên (15/02 đến ngày 16/02 âm lịch), lễ Cầu Bông (16/7 âm lịch), lễ Đưa Thần (25/12 âm lịch làm lễ đưa thần và 30/12 âm lịch làm lễ rước thần). ', 'https : //www.youtube.com/embed/R-iqiBxXcoA?si=vDhJAj9DWtEpCnJn', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.908967343699!2d106.6117680740962!3d11.41415324710902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174ad480803690f%3A0x31bff76d2e8d861a!2zxJDDrG5oIHRo4bqnbiBIxrBuZyBMb25n!5e0!3m2!1svi!2s!4v1735027945107!5m2!1svi!2s')">
+                    <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
+                    <h3>Đình Thần Hưng Long</h3>
+                </div>
+        <div class="grid-container">
+             <div class="grid-item" onclick="showinfoBox('Chùa Quang Minh', 'Chùa Quang Minh Bình Phước tọa lạc ngay trên đường quốc lộ 14, thuộc phường Tân Đồng, thành phố Đồng Xoài. Ngôi chùa này được chính thức khởi công xây dựng từ những năm 50 của thế kỷ trước và đã được trùng tu lại vào năm 1990. Gây ấn tượng ngay từ vẻ bề ngoài khi mang một nét cổ kính với những mái ngói đỏ đặc trưng cho phong cách cổ xưa.', 'https : //www.youtube.com/embed/pIvAwXxGHZ8?si=fc_IuGd-ICw38RcH', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d501661.07659266226!2d106.0963200734375!3d10.793906200000011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175292bad93dcff%3A0x34afdda102b98c71!2sCh%C3%B9a%20Quang%20Minh!5e0!3m2!1svi!2s!4v1735028515236!5m2!1svi!2s')">
+                     <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
+                    <h3>Đình Thần Hưng Long</h3>
+              </div>
+         <div class="grid-container">
+             <div class="grid-item" onclick="showinfoBox('Chùa Quang Minh', 'Chùa Quang Minh Bình Phước tọa lạc ngay trên đường quốc lộ 14, thuộc phường Tân Đồng, thành phố Đồng Xoài. Ngôi chùa này được chính thức khởi công xây dựng từ những năm 50 của thế kỷ trước và đã được trùng tu lại vào năm 1990. Gây ấn tượng ngay từ vẻ bề ngoài khi mang một nét cổ kính với những mái ngói đỏ đặc trưng cho phong cách cổ xưa.', 'https : //www.youtube.com/embed/pIvAwXxGHZ8?si=fc_IuGd-ICw38RcH', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d501661.07659266226!2d106.0963200734375!3d10.793906200000011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175292bad93dcff%3A0x34afdda102b98c71!2sCh%C3%B9a%20Quang%20Minh!5e0!3m2!1svi!2s!4v1735028515236!5m2!1svi!2s')">
+                    <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
+                    <h3>Đình Thần Hưng Long</h3>
+                </div>
         </div>
     </main>
     <!-- Overlay background -->
@@ -793,6 +810,7 @@
             <span>Copyright © 2024 <a href="https://ceoworldmaster.github.io/BPF-Tour/">BPF Tour</a>. All rights reserved.</span>
             <div class="links">
                 <span><a href="Privacy_Policy.html">Privacy Policy</a></span>
+                <span><a href="TOU.html">Terms of use</a></span>
                 <span><a href="faq.html">FAQ</a></span>
             </div>
         </div>
