--- a/game.html
+++ b/game.html
@@ -407,8 +407,9 @@
                 <ul class="submenu">
                     <li><a href="sinhthai.html"><i class="fa-solid fa-seedling"></i>Du lịch sinh thái</a></li>
                     <li><a href="lichsu.html"><i class="fa-solid fa-landmark"></i>Di tích lịch sử</a></li>
-                    <li><a href="vuichoi.html"><i class="fa-solid fa-face-laugh-beam"></i>Vui chơi giải trí</a></li>
                     <li><a href="langnghe.html"><i class="fa-solid fa-hand"></i>Làng nghề</a></li>
+                    <li><a href="vuichoi.html"><i class="fa-solid fa-face-laugh-beam"></i>Vui chơi giải trí</a></li>
+                    <li><a href="tongiao.html"><i class="fa-solid fa-mosque"></i>Du lịch tôn giáo</a></li>
                 </ul>
             </li>
             <li><a href="vhstieng.html"><i class="fa-solid fa-graduation-cap"></i>Văn hóa S'tiêng</a></li>
@@ -441,7 +442,7 @@
     <body>
       <section class="hero">
         <div class="hero-section">
-            <h2>BPF GAMING</h2>
+            <h2>BPF LEARNING</h2>
             <p>Hãy tìm kiếm các địa điểm du lịch Bình Phước!</p>
             <form action="#" class="search-box" onsubmit="return false;">
                 <input type="text" id="searchInput" placeholder="Tìm kiếm tại đây...">
@@ -486,13 +487,13 @@
     
           <!-- Game 3 -->
           <div class="game-card">
-            <img src="https://via.placeholder.com/300x200" alt="Game Scratch">
+            <img src="https://imgur.com/1PgN214.png" alt="Game Scratch">
             <div class="game-info">
-              <h3>Game Scratch 3</h3>
-              <p>Khám phá thế giới sáng tạo với Scratch 3.</p>
+              <h3>TRY KNOWLEDGEABLE</h3>
+              <p>Kiến thức tạo nên sự thông thái</p>
               <a href="#" class="btn-animated play-button"
-                 data-title="Game Scratch 3"
-                 data-embed="<iframe src='https://scratch.mit.edu/projects/559404340/embed' frameborder='0' allowfullscreen></iframe>">
+                 data-title="TRY KNOWLEDGEABLE"
+                 data-embed="<iframe src='https://quizizz.com/join?gc=38152528' frameborder='0' allowfullscreen></iframe>">
                 <i>▶</i> CHƠI NGAY
               </a>
             </div>
@@ -624,10 +625,10 @@
             <div class="link-boxes">
                 <div class="box">
                     <span class="link_name">Danh Mục</span>
-                    <li><a href="home.html"><i class="fa-solid fa-house"></i>Giới thiệu</a></li>
                     <li><a href="kinhte.html"><i class="fa-solid fa-coins"></i>Kinh tế</a></li>
                     <li><a href="sinhthai.html"><i class="fa-solid fa-seedling"></i>Du lịch sinh thái</a></li>
                     <li><a href="lichsu.html"><i class="fa-solid fa-landmark"></i>Di tích lịch sử</a></li>
+                    <li><a href="tongiao.html"><i class="fa-solid fa-mosque"></i>Du lịch tôn giáo</a></li>
                     <li><a href="vuichoi.html"><i class="fa-solid fa-face-laugh-beam"></i>Vui chơi giải trí</a></li>
                     <li><a href="vhstieng.html"><i class="fa-solid fa-graduation-cap"></i>Văn hóa S'tiêng</a></li>
                     <li><a href="langnghe.html"><i class="fa-solid fa-hand"></i>Làng nghề</a></li>
@@ -664,6 +665,7 @@
             <span>Copyright © 2024 <a href="https://ceoworldmaster.github.io/BPF-Tour/">BPF Tour</a>. All rights reserved.</span>
             <div class="links">
                 <span><a href="Privacy_Policy.html">Privacy Policy</a></span>
+                <span><a href="TOU.html">Terms of use</a></span>
                 <span><a href="faq.html">FAQ</a></span>
             </div>
         </div>
