--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Du Lịch Bình Phước</title>
+  <title>Bình Phước Fantastic Tour</title>
   <link rel="icon" href="logo.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -309,7 +309,9 @@
   </video>
 
   <div class="infocircle-button">
-    <img src="https://imgur.com/4qFSiph.png" alt="Icon">
+    <a href="test.html">
+      <img src="https://imgur.com/4qFSiph.png" alt="Icon">
+    </a>
   </div>
 
   <div class="sound-button">
@@ -333,7 +335,7 @@
   </div>
   <div class="modal" id="modal">
     <div class="modal-content">
-        <h2>Bạn có muốn mở nhạc không?</h2>
+        <h2>Bạn hãy chọn ngôn ngữ sử dụng để bắt đầu. Hiện tại bạn có muốn mở nhạc không?</h2>
         <button id="yesButton" style="background-color: green;">Có</button>
         <button id="noButton" style="background-color: red;">Không</button>
     </div>
