--- a/home.html
+++ b/home.html
@@ -368,7 +368,143 @@
         .search-box input:focus::placeholder {
             opacity: 0.5; /* Độ trong suốt của placeholder khi focus */
         }
+        @media (max-width: 500px) {
+            .hero h2 {
+                font-size: 60px; /* Điều chỉnh kích thước chữ cho tiêu đề hero */
+            }
+        }
     </style>
+    <style>
+      .slider{
+          position: relative;
+          background: #000116;
+          justify-content: center; /* Căn giữa theo chiều ngang */
+          width: 100%;
+          min-height: 500px;
+          overflow: hidden;
+          border-radius: 10px;
+          margin-bottom: 10px;
+      }
+      .slider .slide{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          clip-path: circle(0% at 0 50%);
+      }
+  
+      .slider .slide.active{
+          clip-path: circle(150% at 0 50%);
+          transition: 2s;
+      }
+  
+      .slider .slide img{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+      }
+  
+      .slider .slide .info{
+          position: absolute;
+          color: #222;
+          background: rgba(255, 255, 255, 0.623);
+          width: 75%;
+          margin-top: 50px;
+          margin-left: 50px;
+          padding: 20px;
+          border-radius: 5px;
+          box-shadow: 0 5px 25px rgb(1 1 1 / 5%);
+      }
+  
+      .slider .slide .info h2{
+          font-size: 2em;
+          font-weight: 800;
+          font-family: "Bungee";
+      }
+  
+      .slider .slide .info p{
+          font-size: 1em;
+          font-weight: 400;
+          font-family: Arial, Helvetica, sans-serif;
+      }
+  
+      .navigation{
+          height: 500px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          opacity: 0;
+          transition: opacity 0.5s ease;
+      }
+  
+      .slider:hover .navigation{
+          opacity: 1;
+      }
+  
+      .prev-btn, .next-btn{
+          z-index: 10;
+          font-size: 2em;
+          color: #222;
+          background: rgba(255, 255, 255, 0.8);
+          padding: 10px;
+          cursor: pointer;
+      }
+  
+      .prev-btn{
+          border-top-right-radius: 3px;
+          border-bottom-right-radius: 3px;
+      }
+  
+      .next-btn{
+          border-top-left-radius: 3px;
+          border-bottom-left-radius: 3px;
+      }
+  
+      .navigation-visibility{
+          z-index: 10;
+          display: flex;
+          justify-content: center;
+      }
+  
+      .navigation-visibility .slide-icon{
+          z-index: 9;
+          background: rgba(255, 255, 255, 0.5);
+          width: 20px;
+          height: 10px;
+          transform: translateY(-50px);
+          margin: 0 6px;
+          border-radius: 2px;
+          box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+      }
+  
+      .navigation-visibility .slide-icon.active{
+          background: #4285F4;
+      }
+  
+      @media (max-width: 900px){
+          .slider{
+              width: 100%;
+          }
+  
+          .slider .slide .info{
+              position: relative;
+              width: 80%;
+              margin-left: auto;
+              margin-right: auto;
+          }
+      }
+  
+      @media (max-width: 500px){
+          .slider .slide .info h2{
+              font-size: 1.8em;
+              line-height: 40px;
+          }
+  
+          .slider .slide .info p{
+              font-size: 0.9em;
+          }
+      }
+  </style>
   <div id="toggle">
     <i class="fas fa-bars"></i>
   </div>
@@ -433,6 +569,51 @@
         </form>
     </div>
 </section>
+<h1 style="margin:10px 0 10px 0;">Information</h1>
+<div class="slider">
+  <div class="slide active">
+    <img src="https://imgur.com/QcuMFmz.png" alt="">
+  </div>
+
+  <div class="slide active">
+    <img src="https://imgur.com/2Z0762q.png" alt="">
+  </div>
+
+  <div class="slide active">
+    <img src="https://imgur.com/T0A9CJq.png" alt="">
+  </div>
+
+  <div class="slide active">
+    <img src="https://imgur.com/FuA2tDc.png" alt="">
+  </div>
+
+  <div class="slide active">
+    <img src="https://imgur.com/lNiZCsZ.png" alt="">
+  </div>
+
+  <div class="slide active">
+    <img src="https://imgur.com/2kG3PNe.png" alt="">
+  </div>
+
+  <div class="slide active">
+    <img src="https://imgur.com/3olJpqP.png" alt="">
+  </div>
+
+
+  <div class="navigation">
+    <i class="fas fa-chevron-left prev-btn"></i>
+    <i class="fas fa-chevron-right next-btn"></i>
+  </div>
+  <div class="navigation-visibility">
+    <div class="slide-icon active"></div>
+    <div class="slide-icon"></div>
+    <div class="slide-icon"></div>
+    <div class="slide-icon"></div>
+    <div class="slide-icon"></div>
+    <div class="slide-icon"></div>
+    <div class="slide-icon"></div>
+  </div>
+</div>
   <h1 style="margin-top: 20px;">Thông tin</h1>
   <section class="content-map">
     <div class="text-content">
@@ -443,7 +624,9 @@
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d999812.3323651778!2d106.25980617716718!3d11.799025082474063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3173682fdb7d221f%3A0x94c01b0e72f84211!2zQsOsbmggUGjGsOG7m2MsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1724038235390!5m2!1svi!2s"
         width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-  </section>s
+  </section>
+
+  
   <!-- Chatbot container -->
   <div class="chat-container" id="chatContainer">
     <div id="chatHeader">
