--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <img src="https://imgur.com/9Jm93Po.png" alt="Việt Nam">
       </a>
       <!-- Nút cờ Anh chuyển đến home-en.html -->
-      <a href="home-en.html" class="flag-button">
+      <a href="home.html" class="flag-button">
         <img src="https://imgur.com/ix0zn3x.png" alt="Anh">
       </a>
     </div>
